[package]
name = "ferrishot_iced"
description = "A cross-platform GUI library inspired by Elm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [
  "wgpu",
  "tiny-skia",
  "web-colors",
  "auto-detect-theme",
  "thread-pool",
]
# Enables the `wgpu` GPU-accelerated renderer backend
wgpu = ["ferrishot_iced_renderer/wgpu", "ferrishot_iced_widget/wgpu"]
# Enables the `tiny-skia` software renderer backend
tiny-skia = ["ferrishot_iced_renderer/tiny-skia"]
# Enables the `image` widget
image = ["image-without-codecs", "image/default"]
# Enables the `image` widget, without any built-in codecs of the `image` crate
image-without-codecs = ["ferrishot_iced_widget/image", "dep:image"]
# Enables the `svg` widget
svg = ["ferrishot_iced_widget/svg"]
# Enables the `canvas` widget
canvas = ["ferrishot_iced_widget/canvas"]
# Enables the `qr_code` widget
qr_code = ["ferrishot_iced_widget/qr_code"]
# Enables the `markdown` widget
markdown = ["ferrishot_iced_widget/markdown"]
# Enables lazy widgets
lazy = ["ferrishot_iced_widget/lazy"]
# Enables a debug view in native platforms (press F12)
debug = ["ferrishot_iced_winit/debug", "ferrishot_iced_devtools"]
# Enables the `thread-pool` futures executor as the `executor::Default` on native platforms
thread-pool = ["ferrishot_iced_futures/thread-pool"]
# Enables `tokio` as the `executor::Default` on native platforms
tokio = ["ferrishot_iced_futures/tokio"]
# Enables `smol` as the `executor::Default` on native platforms
smol = ["ferrishot_iced_futures/smol"]
# Enables querying system information
system = ["ferrishot_iced_winit/system"]
# Enables broken "sRGB linear" blending to reproduce color management of the Web
web-colors = ["ferrishot_iced_renderer/web-colors"]
# Enables the WebGL backend
webgl = ["ferrishot_iced_renderer/webgl"]
# Enables syntax highligthing
highlighter = [
  "ferrishot_iced_highlighter",
  "ferrishot_iced_widget/highlighter",
]
# Enables the advanced module
advanced = ["ferrishot_iced_core/advanced", "ferrishot_iced_widget/advanced"]
# Embeds Fira Sans into the final application; useful for testing and Wasm builds
fira-sans = ["ferrishot_iced_renderer/fira-sans"]
# Auto-detects light/dark mode for the built-in theme
auto-detect-theme = ["ferrishot_iced_core/auto-detect-theme"]
# Enables strict assertions for debugging purposes at the expense of performance
strict-assertions = ["ferrishot_iced_renderer/strict-assertions"]
# Redraws on every runtime event, and not only when a widget requests it
unconditional-rendering = ["ferrishot_iced_winit/unconditional-rendering"]
# Enables support for the `sipper` library
sipper = ["ferrishot_iced_runtime/sipper"]

[dependencies]
ferrishot_iced_debug.workspace = true
ferrishot_iced_core.workspace = true
ferrishot_iced_futures.workspace = true
ferrishot_iced_renderer.workspace = true
ferrishot_iced_runtime.workspace = true
ferrishot_iced_widget.workspace = true
ferrishot_iced_winit.features = ["program"]
ferrishot_iced_winit.workspace = true

ferrishot_iced_devtools.workspace = true
ferrishot_iced_devtools.optional = true

ferrishot_iced_highlighter.workspace = true
ferrishot_iced_highlighter.optional = true

thiserror.workspace = true

image.workspace = true
image.optional = true

[dev-dependencies]
criterion = "0.5"
ferrishot_iced_wgpu.workspace = true

[[bench]]
name = "wgpu"
harness = false
required-features = ["canvas"]

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[workspace]
members = [
  "beacon",
  "core",
  "debug",
  "devtools",
  "futures",
  "graphics",
  "highlighter",
  "program",
  "renderer",
  "runtime",
  "test",
  "tiny_skia",
  "wgpu",
  "widget",
  "winit",
]

[workspace.package]
version = "0.14.0"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
homepage = "https://iced.rs"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.85"

[workspace.dependencies]
ferrishot_iced = { version = "0.14.0", path = "." }
ferrishot_iced_beacon = { version = "0.14.0", path = "beacon" }
ferrishot_iced_core = { version = "0.14.0", path = "core" }
ferrishot_iced_debug = { version = "0.14.0", path = "debug" }
ferrishot_iced_devtools = { version = "0.14.0", path = "devtools" }
ferrishot_iced_futures = { version = "0.14.0", path = "futures" }
ferrishot_iced_graphics = { version = "0.14.0", path = "graphics" }
ferrishot_iced_highlighter = { version = "0.14.0", path = "highlighter" }
ferrishot_iced_program = { version = "0.14.0", path = "program" }
ferrishot_iced_renderer = { version = "0.14.0", path = "renderer" }
ferrishot_iced_runtime = { version = "0.14.0", path = "runtime" }
ferrishot_iced_test = { version = "0.14.0", path = "test" }
ferrishot_iced_tiny_skia = { version = "0.14.0", path = "tiny_skia" }
ferrishot_iced_wgpu = { version = "0.14.0", path = "wgpu" }
ferrishot_iced_widget = { version = "0.14.0", path = "widget" }
ferrishot_iced_winit = { version = "0.14.0", path = "winit" }

bincode = "1.3"
bitflags = "2.0"
bytemuck = { version = "1.0", features = ["derive"] }
bytes = "1.6"
cosmic-text = "0.14"
dark-light = "2.0"
futures = { version = "0.3", default-features = false }
glam = "0.25"
cryoglyph = { git = "https://github.com/iced-rs/cryoglyph.git", rev = "a456d1c17bbcf33afcca41d9e5e299f9f1193819" }
guillotiere = "0.6"
half = "2.2"
image = { version = "0.25", default-features = false }
kamadak-exif = "0.5"
kurbo = "0.10"
lilt = "0.8"
log = "0.4"
lyon = "1.0"
lyon_path = "1.0"
num-traits = "0.2"
ouroboros = "0.18"
png = "0.17"
pulldown-cmark = "0.12"
qrcode = { version = "0.13", default-features = false }
raw-window-handle = "0.6"
resvg = "0.42"
rustc-hash = "2.0"
serde = "1.0"
semver = "1.0"
sha2 = "0.10"
sipper = "0.1"
smol = "2"
smol_str = "0.2"
softbuffer = "0.4"
syntect = "5.1"
sysinfo = "0.33"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = "1.0"
tracing = "0.1"
unicode-segmentation = "1.0"
url = "2.5"
wasm-bindgen-futures = "0.4"
wasmtimer = "0.4.1"
web-sys = "0.3.69"
web-time = "1.1"
wgpu = "24.0"
window_clipboard = "0.4.1"
winit = { git = "https://github.com/iced-rs/winit.git", rev = "11414b6aa45699f038114e61b4ddf5102b2d3b4b" }

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"
map-entry = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
