[package]
name = "ferrishot_iced_debug"
description = "A pluggable API for debugging iced applications"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
enable = ["dep:ferrishot_iced_beacon"]

[dependencies]
ferrishot_iced_core.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ferrishot_iced_beacon.workspace = true
ferrishot_iced_beacon.optional = true
