[package]
name = "ferrishot_iced_devtools"
description = "devtools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrishot_iced_program.workspace = true
ferrishot_iced_widget.workspace = true
ferrishot_iced_debug.workspace = true
