[package]
name = "ferrishot_iced_program"
description = "iced program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
ferrishot_iced_graphics.workspace = true
ferrishot_iced_runtime.workspace = true

[lints]
workspace = true
