[package]
name = "ferrishot_iced_renderer"
description = "The official renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
wgpu = ["ferrishot_iced_wgpu"]
tiny-skia = ["ferrishot_iced_tiny_skia"]
image = ["ferrishot_iced_tiny_skia?/image", "ferrishot_iced_wgpu?/image"]
svg = ["ferrishot_iced_tiny_skia?/svg", "ferrishot_iced_wgpu?/svg"]
geometry = ["ferrishot_iced_graphics/geometry", "ferrishot_iced_tiny_skia?/geometry", "ferrishot_iced_wgpu?/geometry"]
web-colors = ["ferrishot_iced_wgpu?/web-colors"]
webgl = ["ferrishot_iced_wgpu?/webgl"]
fira-sans = ["ferrishot_iced_graphics/fira-sans"]
strict-assertions = ["ferrishot_iced_wgpu?/strict-assertions"]

[dependencies]
ferrishot_iced_graphics.workspace = true

ferrishot_iced_tiny_skia.workspace = true
ferrishot_iced_tiny_skia.optional = true

ferrishot_iced_wgpu.workspace = true
ferrishot_iced_wgpu.optional = true

log.workspace = true
thiserror.workspace = true
