[package]
name = "ferrishot_iced_test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrishot_iced_runtime.workspace = true

ferrishot_iced_renderer.workspace = true
ferrishot_iced_renderer.features = ["fira-sans"]

png.workspace = true
sha2.workspace = true
thiserror.workspace = true
