[package]
name = "ferrishot_iced_widget"
description = "The built-in widgets for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
lazy = ["ouroboros"]
image = ["ferrishot_iced_renderer/image"]
svg = ["ferrishot_iced_renderer/svg"]
canvas = ["ferrishot_iced_renderer/geometry"]
qr_code = ["canvas", "dep:qrcode"]
wgpu = ["ferrishot_iced_renderer/wgpu"]
markdown = ["dep:pulldown-cmark", "dep:url"]
highlighter = ["dep:ferrishot_iced_highlighter"]
advanced = []

[dependencies]
ferrishot_iced_renderer.workspace = true
ferrishot_iced_runtime.workspace = true

num-traits.workspace = true
log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

ouroboros.workspace = true
ouroboros.optional = true

qrcode.workspace = true
qrcode.optional = true

pulldown-cmark.workspace = true
pulldown-cmark.optional = true

ferrishot_iced_highlighter.workspace = true
ferrishot_iced_highlighter.optional = true

url.workspace = true
url.optional = true
